# berlinger_fridge_tag_v2

./: .env.example  .gitignore  DHIS2.md  Makefile  README.md  package.json  pyproject.toml
data/input/: 160400343949_202503171012.txt  160400343949_202504070923.txt  160400343949_202511281530.txt  160400343951_202506111034_20250611T083422Z.txt
data/output/: 160400343949_202503171012.json  160400343949_202504070923.json  160400343949_202511281530.json  160400343951_202506111034_20250611T083422Z.json
grammars/: BerlingerFridgeTag.g4
src/berlinger/: __init__.py  cli.py  dhis2_client.py  dhis2_models.py  dhis2_service.py  fridgetag_json.py  fridgetag_parser.py  keys.py
src/js/: fridgetag_json.js  fridgetag_parser.js  keys.js  schemas.js
tests/: compare.sh
tests/fixtures/invalid/: bad_indent.txt  malformed_temp.txt  truncated.txt
tests/fixtures/valid/: alarm_breaches.txt  full.txt  minimal.txt  missing_temps.txt  negative_temps.txt  single_record.txt
