[project]
name = "berlinger"
version = "0.1.0"
description = "Parser for Berlinger Fridge-tag 2 export files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "pydantic>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
fridgetag-json = "berlinger.fridgetag_json:main"
fridgetag-dhis2 = "berlinger.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/berlinger"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.18.2",
    "pyright>=1.1.407",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
strict_equality = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "BerlingerFridgeTagLexer",
    "BerlingerFridgeTagParser",
    "BerlingerFridgeTagVisitor",
]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportMissingImports = false
reportUntypedBaseClass = false
reportUnusedVariable = false
